# s3li

./: Cargo.toml  README.md
src/: action.rs  logger.rs  main.rs  providers.rs  store.rs  tui.rs
src/providers/: aws.rs  traits.rs
src/providers/aws/: client.rs  credentials.rs  mod.rs
src/state/: mod.rs  state.rs
src/store/: accounts.rs  action_manager.rs  explorer.rs  notifications.rs  sources.rs  state.rs
src/store/explorer/: tree.rs
src/store/explorer/tree/: file.rs  file_tree.rs  folder.rs  tree_item.rs
src/store/notifications/: types.rs
src/store/sources/: buckets.rs  traits.rs
src/store/sources/buckets/: entities.rs
src/store/state/: app_state.rs  state_events.rs  ui_state.rs
src/tui/: accounts.rs  component.rs  components.rs  dashboard.rs  explorer.rs  key_event.rs  list.rs  notifications.rs  region.rs  sections.rs  simple.rs  sources.rs  ui.rs
src/tui/accounts/: add_property.rs  edit.rs  region.rs
src/tui/components/: functions.rs  input.rs  list.rs  popup.rs  traits.rs
src/tui/explorer/: download.rs
src/tui/screens/: dashboard.rs
src/tui/sections/: accounts.rs  explorer.rs  hints.rs  notifications.rs  sources.rs
src/tui/sections/accounts/: add_property.rs  edit.rs  region.rs
src/tui/sections/explorer/: download.rs
src/ui/: accounts.rs  component.rs  dashboard.rs  explorer.rs  list.rs  mod.rs  simple.rs  sources.rs  ui.rs
