[package]
name = "s3li"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
aws-config = "1.4.0"
aws-sdk-s3 = "1.29.0"
configparser = "3.1.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.30"
ratatui = "0.26.2"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
